# auengine

./: README.md
Dep/lib/: Redis.lib  libcurl.lib  libcurld_imp.lib  lua.lib  memcached.lib  tinyxml.bsc  tinyxml.lib
Res/: AuEngine.exp  AuEngine.lib  auengine.xml  autoMysql.vbs  createonplayer.sql  sg_orderDB.sql  sg_serverDB.sql  start.bat
Res/resource/config/: calcserverconfig.xml  messageconfig.xml  robotmsgconfig.xml
Res/resource/script/calcserver/: calcservermain.lua
Res/resource/script/robots/: robotmain.lua
Res/resource/script/server/: main.lua
Res/resource/script/server/Base/: Base.lua  BaseEntity.lua  Class.lua  Deque.lua  LinkList.lua  Queue.lua  RankList.lua  Redis.lua
Res/resource/script/server/Common/: GData.lua
Res/resource/script/server/Config/BoxReward/: BOXREWARD.lua  BOXSPECIAL.lua  BOXTYPE.lua
Res/resource/script/server/Config/Email/: EMAIL.lua  RANKINGREWARD.lua  RANKINGTOPREWARD.lua
Res/resource/script/server/Config/Explore/: CLOUDMINE.lua  EXPLOREBIGMAP.lua  EXPLORECONFIG.lua  MAPEVENT.lua  SOURCEPOINT.lua
Res/resource/script/server/Config/FightingUnit/: FIGHTINGUNIT.lua
Res/resource/script/server/Config/Hero/: HERO_CONFIG.lua
Res/resource/script/server/Config/Item/: EquitAdvance.lua  EquitStrengthen.lua  ItemConfig.lua  PROPCOMPOUND.lua  TRAVELKITCFG.lua  TradeConfig.lua
Res/resource/script/server/Config/ItemSys/: ItemDefaultConfig.lua  PROPCOMPOUND.lua  PROPITEM.lua
Res/resource/script/server/Config/MainEvent/: CUTITEM.lua  EVENTMACRO.lua  EVENTS.lua  GIVEITEM.lua  SALEITEM.lua
Res/resource/script/server/Config/NPC_X/: NPC_X.lua
Res/resource/script/server/Config/Player/: FUNCTIONCFG.lua  SYSTEMOPEN.lua
Res/resource/script/server/Config/Reward/: LIBID.lua  REWARDCOFIG.lua
Res/resource/script/server/Config/Robot/: ROBOT.lua  ROBOTVALUE.lua
Res/resource/script/server/Config/SevenReward/: SEVENREWARDCFG.lua
Res/resource/script/server/Config/Shop/: SHOPITEMS.lua
Res/resource/script/server/Config/Talent/: TALENTCONFIG.lua  TALENT_ACHIEVEMENT.lua
Res/resource/script/server/Config/Task/: TASK_ACHIEVEMENT.lua  TaskConfig.lua
Res/resource/script/server/Config/Technology/: TRAVELKITCFG.lua
Res/resource/script/server/Config/TimeAction/: TimeConfig.lua
Res/resource/script/server/Macro/: Macro.lua  MacroMsgID.lua  MacroMysql.lua  MacroValedate.lua
Res/resource/script/server/World/: Game.lua
Res/resource/script/server/World/Active/: Active.lua  ActiveCtrl.lua  ActiveMgr.lua
Res/resource/script/server/World/Arena/: Arena.lua  ArenaCtrl.lua
Res/resource/script/server/World/BoxSys/: BoxCtrl.lua
Res/resource/script/server/World/EmailSys/: BaseEmail.lua  PlayerEmail.lua  PlayerEmailCtrl.lua  SysEmail.lua
Res/resource/script/server/World/Explore/: ExploreCfg.lua  ExploreCtrl.lua  ExploreFun.lua  ExploreOBJ.lua  ExploreState.lua
Res/resource/script/server/World/Hero/: HEROMACRO.lua  Hero.lua  HeroCtrl.lua  HeroData.lua
Res/resource/script/server/World/Item/: ItemBagCtrl.lua  ItemBase.lua  ItemConfigCtrl.lua  ItemCtrl.lua  ItemData.lua  ItemEquip.lua  ItemEquipCtrl.lua  ItemMainCtrl.lua  ItemProp.lua  ItemPropCtrl.lua  ItemSourceCtrl.lua  ItemUseCtrl.lua
Res/resource/script/server/World/ItemSys/: ItemBagCtrl.lua  ItemSysBase.lua  ItemSysCtrl.lua  ItemSysData.lua  PropCtrl.lua
Res/resource/script/server/World/MainEvent/: MainEventBase.lua  MainEventCtrl.lua
Res/resource/script/server/World/PeopleManage/: PeopleManage.lua  PeopleManageCtrl.lua  PeopleManageFun.lua
Res/resource/script/server/functestscript/: consolefunc.lua  memcached.lua  mysqltest.lua  other.lua  supportfunc.lua  testfunc.lua
Src/Lua/: lua.vcxproj  lua.vcxproj.filters
Src/Lua/etc/: min.c  noparser.c
Src/Lua/src/: loadlib.c  luac.c
Src/Shared/: Array.h  CThreads.cpp  CThreads.h  CallBack.h  CircularQueue.h  Common.h  CrashHandler.cpp  CrashHandler.h  Errors.h  Log.cpp  Log.h  MersenneTwister.cpp  MersenneTwister.h  PerformanceCounter.cpp  PerformanceCounter.hpp  Shared.vcxproj  Shared.vcxproj.filters  Singleton.h  StackWalker.cpp  StackWalker.h  SysInfo.cpp  SysInfo.hpp  Util.cpp  Util.h  auConfig.h  printStackTrace.cpp  printStackTrace.h
Src/Shared/Database/: CreateInterface.cpp  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h
Src/Shared/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketLinux.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketLinux.cpp  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsLinux.cpp  SocketOpsWin32.cpp  SocketWin32.cpp
Src/Shared/Threading/: AtomicBoolean.cpp  AtomicBoolean.h  AtomicCounter.cpp  AtomicCounter.h  AtomicFloat.cpp  AtomicFloat.h  AtomicULong.cpp  AtomicULong.h  ConditionVariable.cpp  ConditionVariable.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
Src/Tinyxml/: tinyxml.vcxproj  tinyxml.vcxproj.filters  xmlplus.hpp
Src/memcached/: MemCacheClient.cpp  MemCacheClient.h  ReadMe.txt  ReadWriteBuffer.h  Socket.cpp  Socket.h  memcached.vcxproj  memcached.vcxproj.filters  sha1.h
Src/server/: AuEngine.vcxproj  AuEngine.vcxproj.filters  QueueNlock.cpp  QueueNlock.h  all.export  analytical_param.cpp  analytical_param.h  aulistensock.cpp  aulistensock.h  auxiliary_kit.cpp  auxiliary_kit.h  basesocket.cpp  basesocket.h  comm_lua_module.h  config_module.cpp  config_module.h  config_struct.h  connsocket.cpp  connsocket.h  doublemsgqueue.h  gameconsole.cpp  gameconsole.h  gameconsolethread.cpp  gameconsolethread.h  gdata.cpp  gdata.h  launcher.cpp  launcher.h  luaExport.cpp  lua_engine.cpp  lua_engine.h  lua_export.cpp  lua_module.cpp  lua_module.h  luathread.cpp  luathread.h  main.cpp  memcached_module.cpp  memcached_module.h  memcached_test.cpp  (+63 more)
doc/uml/: AuEngine.vsd
linux/: CMakeLists.txt
linux/Lua/: CMakeLists.txt
linux/Memcache/: CMakeLists.txt
linux/Shared/: CMakeLists.txt
linux/Tinyxml/: CMakeLists.txt
linux/cmake_modules/: FindCURL.cmake
linux/server/: CMakeLists.txt
(+22 files in other folders)
